fixed overflow

--- a/client/src/ui/css/Profile.module.css
+++ b/client/src/ui/css/Profile.module.css
@@ -1,17 +1,6 @@
-.classView {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background-color: #ffffff;
-}
-
 .fullScreen{
   height: 100%;
-}
-
-.content {
-  overflow-y: auto;
-  flex: 1;
+  overflow: auto;
 }
 
 .profileLeft {
@@ -41,7 +30,7 @@
 .profileContainer {
   width: 360px;
   height: 660px;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
   left: 87px;
   background: #ffffff;
   border-radius: 10px;
@@ -159,9 +148,9 @@
   width: 100%;
   overflow-y: auto;
   padding-right: 30px;
+  margin-bottom: 20px;
   min-height: 300px;
   flex: 1;
-  padding-bottom: 20px;
 }
 
 .courseInfoColumn {
